using list tuples instead of list of dictionaries
corrects for error message that appears in python 3.6.9:
unhashable type: 'dict'

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1662,7 +1662,7 @@
     "top = 4\n",
     "\n",
     "print(f'Duplication of Individuals in Single Objective (showing top {top})')\n",
-    "pd.Series({idx_knapsack: {'packages': sorted(knapsack['packages'])} for idx_knapsack, knapsack in population_all_soh.items()}).value_counts().head(top)"
+    "pd.Series([tuple(sorted(knapsack['packages'])) for idx_knapsack, knapsack in population_all_soh.items()]).value_counts().head(top)"
    ]
   },
   {
@@ -1672,7 +1672,7 @@
    "outputs": [],
    "source": [
     "print(f'Duplication of Individuals in Pareto Optimisation (showing top {top})')\n",
-    "pd.Series({idx_knapsack: {'packages': sorted(knapsack['packages'])} for idx_knapsack, knapsack in population_all_pareto.items()}).value_counts().head(top)"
+    "pd.Series([tuple(sorted(knapsack['packages'])) for idx_knapsack, knapsack in population_all_pareto.items()]).value_counts().head(top)"
    ]
   },
   {
@@ -1799,7 +1799,7 @@
     "top = 4\n",
     "\n",
     "print(f'Duplication of Individuals in Single Objective Optimisation in generation {n_generation_examine} (showing top {top})')\n",
-    "pd.Series({idx_knapsack: {'packages': sorted(knapsack['packages'])} for idx_knapsack, knapsack in population_all_soh.items() if idx_knapsack in idx_indvs_soh}).value_counts().head(top)"
+    "pd.Series([tuple(sorted(knapsack['packages'])) for idx_knapsack, knapsack in popuation_gen_soh.items()]).value_counts().head(top)"
    ]
   },
   {
@@ -1809,7 +1809,7 @@
    "outputs": [],
    "source": [
     "print(f'Duplication of Individuals in Pareto Optimisation in generation {n_generation_examine} (showing top {top})')\n",
-    "pd.Series({idx_knapsack: {'packages': sorted(knapsack['packages'])} for idx_knapsack, knapsack in population_all_pareto.items() if idx_knapsack in idx_indvs_pareto}).value_counts().head(top)"
+    "pd.Series([tuple(sorted(knapsack['packages'])) for idx_knapsack, knapsack in population_gen_pareto.items()]).value_counts().head(top)"
    ]
   },
   {
@@ -1857,16 +1857,25 @@
   },
   "toc": {
    "base_numbering": 1,
+   "colors": {
+    "hover_highlight": "#DAA520",
+    "running_highlight": "#FF0000",
+    "selected_highlight": "#FFD700"
+   },
+   "moveMenuLeft": true,
    "nav_menu": {},
+   "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
+   "threshold": 4,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": true,
+   "widenNotebook": false
   }
  },
  "nbformat": 4,
