--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -86,7 +86,7 @@
    "source": [
     "seed = 3141592653\n",
     "\n",
-    "N_PACKAGES = 20\n",
+    "N_PACKAGES = 1000\n",
     "\n",
     "MIN_WEIGHT = 0.1\n",
     "MAX_WEIGHT = 10\n",
@@ -180,7 +180,7 @@
     "           )\n",
     "\n",
     "for idx_package, package in packages.items():\n",
-    "    plt.annotate(f'{idx_package:02.0f}', xy=(package['weight'], package['value']), fontsize=MEDIUM_SIZE)\n",
+    "    plt.annotate(f'{idx_package:03.0f}', xy=(package['weight'], package['value']), fontsize=MEDIUM_SIZE)\n",
     "    \n",
     "plt.xlabel('weight [kg]')\n",
     "plt.ylabel('value [£]')\n",
@@ -264,7 +264,7 @@
     "n = N_PACKAGES\n",
     "k = N_PACKAGES_PER_KNAPSACK\n",
     "\n",
-    "n_combinations = factorial(n)/factorial(k)/factorial(n-k)\n",
+    "n_combinations = factorial(n)//factorial(k)//factorial(n-k)\n",
     "\n",
     "f'There are {pretty_int(n_combinations)} combinations of {n} choose {k}.'"
    ]
@@ -1278,7 +1278,7 @@
     "PROB_CROSS_OVER = 0.6    # probability that any parent may craete a child by mating with another parent\n",
     "\n",
     "# -- mutation --\n",
-    "PROB_MUTATION = 0.3      # probability that any parent may create a child by mutating itself\n",
+    "PROB_MUTATION = 0.4      # probability that any parent may create a child by mutating itself\n",
     "N_PACKAGES_MUTATE = 2    # number of packages used for the process of mutation\n",
     "\n",
     "\n",
@@ -1646,8 +1646,8 @@
     "plt.title(f'Individuals of all {n_generations} generations')\n",
     "\n",
     "plt.legend(fontsize=10)\n",
-    "plt.xlim(*x_lim)\n",
-    "plt.ylim(*y_lim)\n",
+    "# plt.xlim(*x_lim)\n",
+    "# plt.ylim(*y_lim)\n",
     "pass"
    ]
   },
@@ -1673,58 +1673,6 @@
    "source": [
     "print(f'Duplication of Individuals in Pareto Optimisation (showing top {top})')\n",
     "pd.Series([tuple(sorted(knapsack['packages'])) for idx_knapsack, knapsack in population_all_pareto.items()]).value_counts().head(top)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# visulalising the decision space\n",
-    "\n",
-    "width = 0.4\n",
-    "alpha = 0.6\n",
-    "\n",
-    "package_idxs, package_counts = np.unique([package_idx for idx_indv, indv in population_all_pareto.items() for package_idx in indv['packages']], return_counts=True)\n",
-    "package_counts_pareto = {package_idx: package_count for package_idx, package_count in zip(package_idxs, package_counts)}\n",
-    "\n",
-    "package_idxs, package_counts = np.unique([package_idx for idx_indv, indv in population_all_soh.items() for package_idx in indv['packages']], return_counts=True)\n",
-    "package_counts_soh = {package_idx: package_count for package_idx, package_count in zip(package_idxs, package_counts)}\n",
-    "\n",
-    "\n",
-    "package_idxs = np.array(list(package_counts_pareto.keys()))\n",
-    "\n",
-    "plt.figure(figsize=(16,5))\n",
-    "\n",
-    "plt.subplot(1, 2, 1)\n",
-    "\n",
-    "plt.bar(package_idxs - width/2, package_counts_pareto.values(), color='green', width=width, alpha=alpha)\n",
-    "plt.bar(package_idxs + width/2, package_counts_soh.values() , color='red', width=width, alpha=alpha)\n",
-    "plt.xticks(np.arange(len(package_idxs)), package_idxs)\n",
-    "\n",
-    "plt.xlabel('package index')\n",
-    "plt.ylabel('counts')\n",
-    "\n",
-    "# ----\n",
-    "\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.scatter([packages[idx_package]['weight'] for idx_package in packages],\n",
-    "            [packages[idx_package]['value'] for idx_package in packages],\n",
-    "            color = 'purple', alpha=0.04\n",
-    "           )\n",
-    "\n",
-    "\n",
-    "for idx_package, package in packages.items():\n",
-    "    fontsize_ = MEDIUM_SIZE\n",
-    "    plt.annotate(f'{idx_package:02.0f}', xy=(package['weight'], package['value']), fontsize=fontsize_)\n",
-    "    \n",
-    "plt.xlabel('weight [kg]')\n",
-    "plt.ylabel('value [£]')\n",
-    "plt.title('Packages')\n",
-    "\n",
-    "\n",
-    "pass"
    ]
   },
   {
@@ -1785,8 +1733,8 @@
     "plt.ylabel('value [£]')\n",
     "plt.title(f'Individuals of generation {n_generation_examine} ')\n",
     "\n",
-    "plt.xlim(*x_lim)\n",
-    "plt.ylim(*y_lim)\n",
+    "# plt.xlim(*x_lim)\n",
+    "# plt.ylim(*y_lim)\n",
     "pass"
    ]
   },
@@ -1834,6 +1782,65 @@
     "* `DEAP`\n",
     "\n",
     "* `pymoo` ([site](http://pymoo.org/), [github](https://github.com/msu-coinlab/pymoo/tree/6bad624cc70d12856b47c17cf0f9908a1b3653c5), [arxiv](https://arxiv.org/pdf/2002.04504.pdf) ). comment: no spea2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Appendix: Visualising Decision Space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# visulalising the decision space\n",
+    "\n",
+    "width = 0.4\n",
+    "alpha = 0.6\n",
+    "\n",
+    "package_idxs, package_counts = np.unique([package_idx for idx_indv, indv in population_all_pareto.items() for package_idx in indv['packages']], return_counts=True)\n",
+    "package_counts_pareto = {package_idx: package_count for package_idx, package_count in zip(package_idxs, package_counts)}\n",
+    "\n",
+    "package_idxs, package_counts = np.unique([package_idx for idx_indv, indv in population_all_soh.items() for package_idx in indv['packages']], return_counts=True)\n",
+    "package_counts_soh = {package_idx: package_count for package_idx, package_count in zip(package_idxs, package_counts)}\n",
+    "\n",
+    "\n",
+    "package_idxs = np.array(list(package_counts_pareto.keys()))\n",
+    "\n",
+    "plt.figure(figsize=(16,5))\n",
+    "\n",
+    "plt.subplot(1, 2, 1)\n",
+    "\n",
+    "plt.bar(package_idxs - width/2, package_counts_pareto.values(), color='green', width=width, alpha=alpha)\n",
+    "plt.bar(package_idxs + width/2, package_counts_soh.values() , color='red', width=width, alpha=alpha)\n",
+    "plt.xticks(np.arange(len(package_idxs)), package_idxs)\n",
+    "\n",
+    "plt.xlabel('package index')\n",
+    "plt.ylabel('counts')\n",
+    "\n",
+    "# ----\n",
+    "\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.scatter([packages[idx_package]['weight'] for idx_package in packages],\n",
+    "            [packages[idx_package]['value'] for idx_package in packages],\n",
+    "            color = 'purple', alpha=0.04\n",
+    "           )\n",
+    "\n",
+    "\n",
+    "for idx_package, package in packages.items():\n",
+    "    fontsize_ = MEDIUM_SIZE\n",
+    "    plt.annotate(f'{idx_package:02.0f}', xy=(package['weight'], package['value']), fontsize=fontsize_)\n",
+    "    \n",
+    "plt.xlabel('weight [kg]')\n",
+    "plt.ylabel('value [£]')\n",
+    "plt.title('Packages')\n",
+    "\n",
+    "\n",
+    "pass"
    ]
   }
  ],
