minor - seed as a variable

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1543,8 +1543,9 @@
     "parents_compete = True\n",
     "selector = 'pareto_naive' # 'single_objective_optimisation'\n",
     "display_pareto_front = True\n",
+    "seed = 1\n",
     "\n",
-    "population_all_pareto = knapsack_genetic_algorithm(n_generations, seed=1, selector=selector, \n",
+    "population_all_pareto = knapsack_genetic_algorithm(n_generations, seed=seed, selector=selector, \n",
     "                                                   exact_n_selection=True,\n",
     "                                                   parents_compete=parents_compete,\n",
     "                                                   display_pareto_front=display_pareto_front\n",
@@ -1564,7 +1565,7 @@
    "source": [
     "selector = 'single_objective_optimisation'\n",
     "\n",
-    "population_all_soh = knapsack_genetic_algorithm(n_generations, seed=1, selector=selector, \n",
+    "population_all_soh = knapsack_genetic_algorithm(n_generations, seed=seed, selector=selector, \n",
     "                                                exact_n_selection=True, \n",
     "                                                parents_compete=parents_compete,\n",
     "                                                display_pareto_front=display_pareto_front\n",
