--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Knapsack Problem: Exhaustive Search\n",
+    "# Pareto Front Fundamentals With The Knapsack Problem\n",
     "\n",
     "\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/f/fd/Knapsack.svg\" width=300>\n",
@@ -14,7 +14,24 @@
     "\n",
     "This notebook may be used in Google Colab. To access press this button:\n",
     "\n",
-    "<a href=\"https://colab.research.google.com/github/elzurdo/multi_objective_optimisation/blob/master/01_knapsack%202D_exhaustive.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>\n"
+    "<a href=\"https://colab.research.google.com/github/elzurdo/multi_objective_optimisation/blob/master/01_knapsack%202D_exhaustive.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>\n",
+    "\n",
+    "\n",
+    "In this notebook you will learn:  \n",
+    "* The limitations of Single Objective Optimisation  \n",
+    "* Identifying a Pareto Front of a distribution of solutions\n",
+    "\n",
+    "To this end we will optimise for the knapsack problem. \n",
+    "\n",
+    "**The Knapsack Problem**   \n",
+    "In this challenge we will fill virtual knapsacks with packages that have monetary value and weight, \n",
+    "where our objective is to minimise the final weight of the knapsack and maximise the total monetary value of its contents.    \n",
+    "(You will also be able to change the objectives from min-max to max-max or any other combination.) \n",
+    "\n",
+    "For simplicity here we will explore an exhaustive solution space, i.e, one where we can brute force our way to \n",
+    "all the solutions.  \n",
+    "\n",
+    "Throughout you will see *CHANGE ME!* next to variables that are worth exploring.  "
    ]
   },
   {
@@ -44,6 +61,8 @@
    },
    "outputs": [],
    "source": [
+    "# setting up definitions for visuals \n",
+    "\n",
     "SMALL_SIZE = 12\n",
     "MEDIUM_SIZE = 16\n",
     "BIGGER_SIZE = 20\n",
@@ -63,9 +82,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data \n",
+    "# Data: Packages \n",
     "\n",
-    "Packages setup"
+    "Here define the distribution of weight and monetary value of the packages.   \n",
+    "\n",
+    "Parameters of interest:  \n",
+    "* `N_PACKAGES` - the total number packages to choose from.  \n",
+    "* `value_distribution_mode` - indicates the relationship between the package weight and monetary value. The weights are randomly distributed where as: \n",
+    "    * `value_distribution_mode=random` - monteary value distribution also random\n",
+    "    *  `value_distribution_mode=squared` - montary value is squared that of the weights (up to some noise quantified by `noise_factor`).  "
    ]
   },
   {
@@ -81,7 +106,7 @@
    "source": [
     "seed = 3141592653\n",
     "\n",
-    "N_PACKAGES = 20\n",
+    "N_PACKAGES = 20 # CHANGE ME! the total number of packages to choose from\n",
     "\n",
     "MIN_WEIGHT = 0.1\n",
     "MAX_WEIGHT = 10\n",
@@ -89,8 +114,8 @@
     "MIN_VALUE = 0.1\n",
     "MAX_VALUE = 100\n",
     "\n",
-    "value_distribution_mode = 'random' # 'squared'\n",
-    "noise_factor = 1./2  # examine results of noise_factor = 0 in 'squared' mode, too!\n",
+    "value_distribution_mode = 'random' # 'squared' # CHANGE ME!\n",
+    "noise_factor = 1./2  # CHANGE ME! (effective in 'squared' mode)\n",
     "# ---------------\n",
     "\n",
     "np.random.seed(seed)\n",
@@ -130,9 +155,10 @@
     }
    ],
    "source": [
+    "# packages dictionary\n",
     "packages = {idx: {'weight': weights[idx], 'value': values[idx]} for idx in range(N_PACKAGES)}\n",
     "\n",
-    "[package for ipackage, package in packages.items()][:4]"
+    "{ipackage: package for ipackage, package in packages.items() if ipackage < 4}"
    ]
   },
   {
@@ -169,6 +195,8 @@
     }
    ],
    "source": [
+    "# visualising the package weight-value distribution\n",
+    "\n",
     "plt.scatter([packages[idx_package]['weight'] for idx_package in packages],\n",
     "            [packages[idx_package]['value'] for idx_package in packages],\n",
     "            color = 'purple', alpha=0.04\n",
@@ -186,10 +214,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Scoping Challenge\n",
+    "# Solution Space Size\n",
     "\n",
+    "`N_PACKAGES_PER_KNAPSACK` determines that number of packages that fit into a knapsack.  \n",
+    "Along with the `N_PACKAGES` parameter there is a finite number of knapsacks that may be generated.  \n",
     "\n",
-    "**Combinations**.   \n",
+    "We can easily calculated the number of combinations defined as:    \n",
     "\n",
     "An unordered arrangement of $k$ objects from a set of $n$ \n",
     "$$\n",
@@ -202,20 +232,6 @@
     "with assumptions for siplicity:  \n",
     "* A package can appear only once in a a knapsack.  \n",
     "* The order of a package assigned to a knapsack does not matter.  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-09-11T05:20:37.027363Z",
-     "start_time": "2020-09-11T05:20:37.021817Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from math import factorial"
    ]
   },
   {
@@ -240,13 +256,16 @@
     }
    ],
    "source": [
+    "# combinations calculator\n",
+    "from math import factorial \n",
+    "\n",
     "def pretty_int(x):\n",
     "    if x > 1.e6:\n",
     "        return f'{int(x):0.1e}'\n",
     "    else:\n",
     "        return f'{int(x):,}'\n",
     "\n",
-    "N_PACKAGES_PER_KNAPSACK = 4\n",
+    "N_PACKAGES_PER_KNAPSACK = 4  # CHANGE ME!\n",
     "# -----------\n",
     "    \n",
     "n = N_PACKAGES\n",
@@ -267,8 +286,8 @@
     "\n",
     "In the knapsack problem we have control over which packages to put in a knapsack.  \n",
     "\n",
-    "If our solutions space of possible package combinations is small enough we can brute force our way to \n",
-    "the actual distribution.  That is the objective of this notebook. \n",
+    "If the number of possible package combinations is small enough we can brute force our way to \n",
+    "the actual distribution. That is the objective of this notebook. \n",
     "\n",
     "In the subsequent tutorial we will discuss optimising in an intractable solution space.  "
    ]
@@ -284,6 +303,11 @@
    },
    "outputs": [],
    "source": [
+    "# Creating a generator of all the possible knapsacks\n",
+    "\n",
+    "# NOTE! Only run this if the number of combinations (as calculated above) is of the order <10,000.\n",
+    "# Beyond that the method used in this notebook might take a long time.\n",
+    "\n",
     "from itertools import combinations \n",
     "\n",
     "package_combinations = combinations(packages.keys(), N_PACKAGES_PER_KNAPSACK)"
@@ -298,10 +322,10 @@
     "In multi-objective optimisation the ***Objective Space*** is defined as the parameters that the user is interested in optimising over.  \n",
     "\n",
     "In this tutorial of the knapsack problem we want to optimise for two objectives:    \n",
-    "* knapsack value \n",
-    "* knapsack weight  \n",
+    "* ↑ maximise knapsack value \n",
+    "* ↓ minimise knapsack weight  \n",
     "\n",
-    "In the default setting we will miminse the knapsack weights and maximise their values, but feel free to play around with these objective later on.  "
+    "In the default setting here is ↑↓, but feel free to change to ↓↓, ↑↓ or ↑↑.  "
    ]
   },
   {
@@ -351,6 +375,8 @@
     }
    ],
    "source": [
+    "# creating all possible knapsacks\n",
+    "\n",
     "def knapsack_objective(knapsack, objective, packages):\n",
     "    knapsack[objective] = np.sum([packages[idx_package][objective] for idx_package in knapsack['packages']])\n",
     " \n",
@@ -362,7 +388,7 @@
     "    for objective in objectives:\n",
     "        knapsack_objective(knapsacks[idx_knapsack], objective, packages)\n",
     "        \n",
-    "[knapsack for _, knapsack in knapsacks.items()][:4]"
+    "{idx_knapsack: knapsack for idx_knapsack, knapsack in knapsacks.items() if idx_knapsack<4}"
    ]
   },
   {
@@ -1015,7 +1041,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.6"
   },
   "toc": {
    "base_numbering": 1,
