single objective heurstic generalised to all objective options

--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -314,21 +314,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Defining The Objective Space\n",
-    "\n",
-    "In multi-objective optimisation the ***Objective Space*** is defined as the parameters that the user is interested in optimising over.  \n",
-    "\n",
-    "In this tutorial of the knapsack problem we want to optimise for two objectives:    \n",
-    "* ↑ maximise knapsack value \n",
-    "* ↓ minimise knapsack weight  \n",
-    "\n",
-    "In the default setting here is ↑↓, but feel free to change to ↓↓, ↑↓ or ↑↑.  "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
@@ -446,6 +431,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Defining The Objective Space\n",
+    "\n",
+    "In multi-objective optimisation the ***Objective Space*** is defined as the parameters that the user is interested in optimising over.  \n",
+    "\n",
+    "In this tutorial of the knapsack problem we want to optimise for two objectives:    \n",
+    "* ↑ maximise knapsack value \n",
+    "* ↓ minimise knapsack weight  \n",
+    "\n",
+    "In the default setting here is ↑↓, but feel free to change to ↓↓, ↑↓ or ↑↑.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from operator import lt as less_than, gt as greater_than\n",
+    "from operator import (truediv as div, mul)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Objective Space declaration\n",
+    "\n",
+    "# CHANGE ME!\n",
+    "objective_mode, heuristic, soh_unit = {'weight': 'min', 'value': 'max'}, 'value/weight', '£/kg'\n",
+    "#objective_mode, heuristic, soh_unit = {'weight': 'min', 'value': 'min'}, '1/value/weight', '1/£/kg'\n",
+    "#objective_mode, heuristic, soh_unit = {'weight': 'max', 'value': 'max'}, 'value*weight',  '£*kg'\n",
+    "#objective_mode, heuristic, soh_unit = {'weight': 'max', 'value': 'min'}, 'weight/value', 'kg/£'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "direction_to_multiplier = {'min': div, 'max': mul}\n",
+    "mode_to_operator = {'min': less_than, 'max': greater_than}\n",
+    "\n",
+    "objective_operator = {key: mode_to_operator[objective_mode[key]] for key in objective_mode.keys()}\n",
+    "objective_operator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Single Objective Optimal "
    ]
   },
@@ -461,7 +499,15 @@
    "outputs": [],
    "source": [
     "def knapsack_to_soh(knapsack):\n",
-    "    return knapsack['value'] / knapsack['weight']\n",
+    "    # generalising \n",
+    "    # objectives : returns single-objective-heuristic\n",
+    "    # (min, max) : returns knapsack['value'] / knapsack['weight'] \n",
+    "    # (max, max) : returns knapsack['value'] * knapsack['weight'] \n",
+    "    # etc.\n",
+    "    \n",
+    "    value_heuristic    = direction_to_multiplier[objective_mode['value']](1, knapsack['value'])\n",
+    "    weight_heuristic   = direction_to_multiplier[objective_mode['weight']](1, knapsack['weight'])\n",
+    "    return  value_heuristic * weight_heuristic\n",
     "\n",
     "knapsacks_soh = {iknapsack: knapsack_to_soh(knapsack) for iknapsack, knapsack in knapsacks.items()}"
    ]
@@ -501,7 +547,7 @@
    ],
    "source": [
     "plt.hist(list(knapsacks_soh.values()), alpha=0.4, color='purple')\n",
-    "plt.xlabel('Value/Weight [£/kg]')\n",
+    "plt.xlabel(f'{heuristic} [{soh_unit}]')\n",
     "plt.title('Knapsack Single Objective Heuristic')\n",
     "plt.yscale('log')\n",
     "plt.ylabel('Knapsacks')"
@@ -538,7 +584,7 @@
     "        iknapsack_soo = int(iknapsack)\n",
     "        max_soh = float(soh)\n",
     "        \n",
-    "print(f'For Single Objective Optimisation \\nknapsack {iknapsack_soo} is considered \"optimal\" with a heuristic value of {max_soh:0.1f}.')"
+    "print(f'For Single Objective Optimisation \\nknapsack {iknapsack_soo} is considered \"optimal\" with a heuristic value of {max_soh:0.1f}{soh_unit}.')"
    ]
   },
   {
@@ -576,7 +622,7 @@
    ],
    "source": [
     "plt.scatter(knapsacks[iknapsack_soo]['weight'], knapsacks[iknapsack_soo]['value'], \n",
-    "            marker='x', s=100, alpha=0.9, label='Single Objective', color='black', linewidth=3)\n",
+    "            marker='x', s=100, alpha=0.9, label=f'{heuristic} optimal', color='black', linewidth=3)\n",
     "\n",
     "plt.scatter([knapsacks[idx]['weight'] for idx in knapsacks], \n",
     "            [knapsacks[idx]['value'] for idx in knapsacks], \n",
@@ -585,8 +631,8 @@
     "plt.xlabel('weight [kg]')\n",
     "plt.ylabel('value [£]')\n",
     "plt.title('Knapsacks')\n",
-    "plt.colorbar(label='Single Objective Heuristic [£/kg]')\n",
-    "plt.legend(title='1D Optimal Solutions')"
+    "plt.colorbar(label=f'{heuristic} [{soh_unit}]')\n",
+    "plt.legend()"
    ]
   },
   {
@@ -595,51 +641,6 @@
    "source": [
     "# Pareto Optimal\n",
     "Here you will apply and visualise a Pareto Front algorithm."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-09-11T05:40:21.719809Z",
-     "start_time": "2020-09-11T05:40:21.716093Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from operator import lt as less_than, gt as greater_than"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-09-11T05:40:22.095497Z",
-     "start_time": "2020-09-11T05:40:22.086706Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'weight': <function _operator.gt(a, b, /)>,\n",
-       " 'value': <function _operator.lt(a, b, /)>}"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mode_to_operator = {'min': less_than, 'max': greater_than}\n",
-    "\n",
-    "objective_mode = {'weight': 'min', 'value': 'max'}\n",
-    "\n",
-    "objective_operator = {key: mode_to_operator[objective_mode[key]] for key in objective_mode.keys()}\n",
-    "objective_operator"
    ]
   },
   {
