--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -89,8 +89,8 @@
     "Parameters of interest:  \n",
     "* `N_PACKAGES` - the total number packages to choose from.  \n",
     "* `value_distribution_mode` - indicates the relationship between the package weight and monetary value. The weights are randomly distributed where as: \n",
-    "    * `value_distribution_mode=random` - monteary value distribution also random\n",
-    "    *  `value_distribution_mode=squared` - montary value is squared that of the weights (up to some noise quantified by `noise_factor`).  "
+    "    * `value_distribution_mode=random` - monetary value distribution also random\n",
+    "    *  `value_distribution_mode=squared` - monetary value is squared that of the weights (up to some noise quantified by `noise_factor`).  "
    ]
   },
   {
@@ -219,7 +219,7 @@
     "`N_PACKAGES_PER_KNAPSACK` determines that number of packages that fit into a knapsack.  \n",
     "Along with the `N_PACKAGES` parameter there is a finite number of knapsacks that may be generated.  \n",
     "\n",
-    "We can easily calculated the number of combinations defined as:    \n",
+    "We can easily calculate the number of combinations defined as:    \n",
     "\n",
     "An unordered arrangement of $k$ objects from a set of $n$ \n",
     "$$\n",
@@ -229,7 +229,7 @@
     "Here we use     \n",
     "`k = N_PACKAGES_PER_KNAPSACK`  \n",
     "`n = N_PACKAGES`,  \n",
-    "with assumptions for siplicity:  \n",
+    "with assumptions for simplicity:  \n",
     "* A package can appear only once in a a knapsack.  \n",
     "* The order of a package assigned to a knapsack does not matter.  \n"
    ]
@@ -421,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Assuming you want to mimise the knapsack weight and maximise the value:  \n",
+    "Assuming you want to minimise the knapsack weight and maximise the value:  \n",
     "\n",
     "* Which knapsack would you choose?\n",
     "* If you could choose 3 knapsacks, which ones would you take?"
@@ -694,7 +694,7 @@
     "* Input: `knapsacks` is a list of knapsack objects each with properties `weight`, `value`.  \n",
     "* Output: `pareto_front` is subset list of  `knapsacks` containing Pareto optimal solutions that minimises  `weight` and maximises `value`.  \n",
     "\n",
-    "Pseduo Code: \n",
+    "Pseudo Code: \n",
     "```python\n",
     "pareto_front = []\n",
     "\n",
@@ -882,10 +882,10 @@
     "\n",
     "Once the Pareto Front is identified it is your job as the analyst to present \n",
     "these results to the domain expert to discuss the next steps of the experiment/process.  \n",
-    "(Note: you the analyst might be that domain expert!*  \n",
+    "(Note: you the analyst might be that domain expert!)*  \n",
     "\n",
     "\n",
-    "Most likely the domain expert will weigh in a subjective decision which will be depend on:\n",
+    "Most likely the domain expert will weigh in a subjective decision which will be dependent on:\n",
     "* The number of solutions may be used for the next step. In our example, you might have four knapsack carriers, so you will want to give each one knapsack.   \n",
     "* After seeing the exhaustive solution space how the domain expert might weigh the objectives. \n",
     "* The expert might decide to narrow in on solutions in a given regions, or multiple regions or just sample along the Pareto Front.  \n",
@@ -921,9 +921,9 @@
     "\n",
     "In this tutorial we focused on learning about the Pareto Front in a setting where we have access to the full solution space.  \n",
     "\n",
-    "In reality, however, you will deal with a much larger combinatorial spaces.  \n",
+    "In reality, however, you will deal with much larger combinatorial spaces.  \n",
     "\n",
-    "Play around with this calculator to see how large Knapsack problem is be modfiying `N_PACKAGES` and `N_PACKAGES_PER_KNAPSACK`.  "
+    "Play around with this calculator to see how large Knapsack problem is by modfiying `N_PACKAGES` and `N_PACKAGES_PER_KNAPSACK`.  "
    ]
   },
   {
@@ -1042,7 +1042,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
@@ -1061,6 +1061,35 @@
    },
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
