annotating. correcting factorials to do large combinatorics by using //

--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -498,11 +498,13 @@
    },
    "outputs": [],
    "source": [
+    "# calculating the single objective heuristic for each knapsack (soh) \n",
+    "\n",
     "def knapsack_to_soh(knapsack):\n",
     "    # generalising \n",
-    "    # objectives : returns single-objective-heuristic\n",
-    "    # (min, max) : returns knapsack['value'] / knapsack['weight'] \n",
-    "    # (max, max) : returns knapsack['value'] * knapsack['weight'] \n",
+    "    # (weight,value) : returns single-objective-heuristic\n",
+    "    # (↓, ↑) : returns knapsack['value'] / knapsack['weight'] \n",
+    "    # (↑, ↑) : returns knapsack['value'] * knapsack['weight'] \n",
     "    # etc.\n",
     "    \n",
     "    value_heuristic    = direction_to_multiplier[objective_mode['value']](1, knapsack['value'])\n",
@@ -546,6 +548,8 @@
     }
    ],
    "source": [
+    "# visualising the histogram of all the single objective heuristic values\n",
+    "\n",
     "plt.hist(list(knapsacks_soh.values()), alpha=0.4, color='purple')\n",
     "plt.xlabel(f'{heuristic} [{soh_unit}]')\n",
     "plt.title('Knapsack Single Objective Heuristic')\n",
@@ -573,6 +577,8 @@
     }
    ],
    "source": [
+    "# identifying the knapsack with the highest soh.\n",
+    "\n",
     "# soh - single objective heuristic\n",
     "# soo - single objective optimal\n",
     "\n",
@@ -585,6 +591,26 @@
     "        max_soh = float(soh)\n",
     "        \n",
     "print(f'For Single Objective Optimisation \\nknapsack {iknapsack_soo} is considered \"optimal\" with a heuristic value of {max_soh:0.1f}{soh_unit}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Interim Summary**  \n",
+    "\n",
+    "This is the stage where a lot analyses stop and decisions are made.  \n",
+    "\n",
+    "The process so far has been:  \n",
+    "* combining multiple parameters into a single heuristic\n",
+    "* sorting all solutions according to this heuristic\n",
+    "* selecting the top ($N\\geq1$) solutions as \"optimal\".  \n",
+    "\n",
+    "It may be agruged that this is stopping short from a true in-depth exploration of that decision-objective spaces. \n",
+    "\n",
+    "The 1D histogram above is the equivalent of horse blinders.  \n",
+    "Let's examine scatter plots in our full objective space (in our case 2D) to get the birds eye view.  \n",
+    "\n"
    ]
   },
   {
@@ -621,6 +647,8 @@
     }
    ],
    "source": [
+    "# visualising the weight-value distribution color coded by the heuristic\n",
+    "\n",
     "plt.scatter(knapsacks[iknapsack_soo]['weight'], knapsacks[iknapsack_soo]['value'], \n",
     "            marker='x', s=100, alpha=0.9, label=f'{heuristic} optimal', color='black', linewidth=3)\n",
     "\n",
@@ -948,14 +976,17 @@
     }
    ],
    "source": [
-    "N_PACKAGES = 40 \n",
-    "N_PACKAGES_PER_KNAPSACK = 20\n",
+    "# if you set N_PACKAGES=20,000, N_PACKAGES_PER_KNAPSACK=30 you get \n",
+    "# 4e+96 knapsacks, i.e, more package combinations than atoms in the observable universe! (e+78 to e+82)\n",
+    "\n",
+    "N_PACKAGES = 20000 \n",
+    "N_PACKAGES_PER_KNAPSACK = 30\n",
     "# -----------\n",
     "    \n",
     "n = N_PACKAGES\n",
     "k = N_PACKAGES_PER_KNAPSACK\n",
     "\n",
-    "n_combinations = factorial(n)/factorial(k)/factorial(n-k)\n",
+    "n_combinations = factorial(n)//factorial(k)//factorial(n-k)\n",
     "\n",
     "f'There are {pretty_int(n_combinations)} combinations of {n} choose {k}.'"
    ]
@@ -1042,7 +1073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.6"
   },
   "toc": {
    "base_numbering": 1,
