correcting variable names from min/max to mean/sd and annotating

--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -104,30 +104,30 @@
    },
    "outputs": [],
    "source": [
-    "seed = 3141592653\n",
+    "seed = 3141592653 # CHANGE ME! to get a different distribution\n",
     "\n",
     "N_PACKAGES = 20 # CHANGE ME! the total number of packages to choose from\n",
     "\n",
-    "MIN_WEIGHT = 0.1\n",
-    "MAX_WEIGHT = 10\n",
+    "WEIGHT_MEAN = 0.1 # CHANGE ME! the mean of the weight distribution\n",
+    "WEIGHT_SD = 10    # CHANGE ME! the standard deviation of the weight distribution\n",
     "\n",
-    "MIN_VALUE = 0.1\n",
-    "MAX_VALUE = 100\n",
+    "VALUE_MEAN = 0.1  # CHANGE ME! when value_distribution_mode='random': the mean of the monetary value distribution \n",
+    "VALUE_SD = 100    # CHANGE ME! when value_distribution_mode='random': the standard deviation of the monetary value distribution \n",
     "\n",
-    "value_distribution_mode = 'random' # 'squared' # CHANGE ME!\n",
-    "noise_factor = 1./2  # CHANGE ME! (effective in 'squared' mode)\n",
+    "value_distribution_mode = 'random' # CHANGE ME! options: 'random', 'squared'\n",
+    "noise_factor = 1./2  # CHANGE ME! when value_distribution_mode='squared': the standard deviation of the noise introduced\n",
     "# ---------------\n",
     "\n",
     "np.random.seed(seed)\n",
     "\n",
-    "weights = np.abs(np.random.normal(MIN_WEIGHT, MAX_WEIGHT, N_PACKAGES))\n",
+    "weights = np.abs(np.random.normal(WEIGHT_MEAN, WEIGHT_SD, N_PACKAGES))\n",
     "\n",
     "if 'squared' == value_distribution_mode:\n",
     "    values =  weights ** 2 \n",
     "    values += values * np.random.normal(0, noise_factor, len(weights))\n",
     "    values = np.abs(values)\n",
     "elif 'random' == value_distribution_mode:\n",
-    "    values = np.abs(np.random.normal(MIN_VALUE, MAX_VALUE, N_PACKAGES))"
+    "    values = np.abs(np.random.normal(VALUE_MEAN, VALUE_SD, N_PACKAGES))"
    ]
   },
   {
@@ -977,7 +977,7 @@
    ],
    "source": [
     "# if you set N_PACKAGES=20,000, N_PACKAGES_PER_KNAPSACK=30 you get \n",
-    "# 4e+96 knapsacks, i.e, more package combinations than atoms in the observable universe! (e+78 to e+82)\n",
+    "# 4e+96 knapsacks, i.e, more package combinations than atoms in the observable universe! (estimated e+78 to e+82)\n",
     "\n",
     "N_PACKAGES = 20000 \n",
     "N_PACKAGES_PER_KNAPSACK = 30\n",
